@@ -85,6 +85,7 @@ enum file_ops {
     EXPORT_R,
     EXPORT_R_ALT,
     EXPORT_CSV,
+    EXPORT_DAT,
     COPY_CSV,
     END_SAVE_DATA,  /* marker for end of data-saving section */
     SAVE_CMDS,
